# fundamentos-ml

./: pyproject.toml
notebooks/: c2_KNN.ipynb  c2_KNN_metric.ipynb  c3_linear_regression.ipynb  c3_linear_regression_with_metric.ipynb  c4_holdout_validation.ipynb  c4_overfitting.ipynb  c4_overfitting_regression.ipynb  c5_kmeans.ipynb  c5_kmeans_Elbow_metrics.ipynb  c6_decision_tree.ipynb  c6_decision_tree_precision_recoll_curve.ipynb  c6_decision_tree_regressor.ipynb  c6_f1_score.ipynb  c6_random_forest.ipynb  c6_roc_curve.ipynb  c7_Logistic_Regression.ipynb  c7_Regularização.ipynb  c7_regressão_polinomial.ipynb  c8_affinity_Propagation_turning.ipynb  c8_affinity_propagation_scatter.ipynb
