[tool.poetry]
name = "fundamentos-ml"
version = "0.1.0"
description = ""
authors = ["Douglas Saturnino <douglasaturnino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.3"
jupyter-contrib-nbextensions = "^0.7.0"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
